<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".Tentang_Cgastro" >

    <TextView
        android:id="@+id/tvCgastro1"
        android:layout_width="166dp"
        android:layout_height="46dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:text="@string/tvCgastro1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCgastro2"
        android:layout_width="333dp"
        android:layout_height="149dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="7dp"
        android:lineSpacingExtra="2dp"
        android:text="@string/tvCgastro2"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCgastro1" />

    <TextView
        android:id="@+id/tvCgastro3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/tvCgastro3"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCgastro2" />

    <TextView
        android:id="@+id/tvCgastro4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/tvCgastro4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCgastro3" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="705dp"
        android:layout_height="453dp"
        android:layout_marginTop="236dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCgastro2"
        app:srcCompat="@drawable/tentangcgastro" />
</androidx.constraintlayout.widget.ConstraintLayout>