<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1400dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="247dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:contentDescription="@string/gambarhasil"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:srcCompat="@drawable/hasildiagnosis" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="900dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="266dp"
                android:layout_marginEnd="29dp"
                android:layout_marginRight="29dp"
                app:srcCompat="@drawable/btn_rounded" />

            <TextView
                android:id="@+id/tvhasilumur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="193dp"
                android:layout_marginLeft="193dp"
                android:layout_marginTop="348dp"
                android:layout_marginEnd="87dp"
                android:layout_marginRight="87dp"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="298dp"
                android:layout_marginEnd="209dp"
                android:layout_marginRight="209dp"
                android:text="NAMA                   :"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="348dp"
                android:layout_marginEnd="219dp"
                android:layout_marginRight="219dp"
                android:text="USIA                      :"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="456dp"
                android:layout_marginEnd="193dp"
                android:layout_marginRight="193dp"
                android:text="JENIS DIARE        : "
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvemailpakar"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="515dp"
                android:layout_marginEnd="201dp"
                android:layout_marginRight="201dp"
                android:text="@string/tipe_dehidrasi"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="574dp"
                android:layout_marginEnd="166dp"
                android:layout_marginRight="166dp"
                android:text="@string/penanganan"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvhasildehidrasi"
                android:layout_width="174dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="205dp"
                android:layout_marginLeft="205dp"
                android:layout_marginTop="512dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvhasiljenis"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="207dp"
                android:layout_marginLeft="207dp"
                android:layout_marginTop="457dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvhasilgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="209dp"
                android:layout_marginLeft="209dp"
                android:layout_marginTop="400dp"
                android:layout_marginEnd="71dp"
                android:layout_marginRight="71dp"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvhasilnama"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="200dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="298dp"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvhasilpenanganan"
                android:layout_width="wrap_content"
                android:layout_height="560dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="602dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:textColor="#537780"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="399dp"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="JENIS KELAMIN  :"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/penjelasan_diagnosa"
                android:layout_width="273dp"
                android:layout_height="46dp"
                android:layout_below="@+id/imageView2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/btn_rounded"
                android:onClick="launchtentangdiare"
                android:text="Penjelasan Diagnosa"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/back_to_menu"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_below="@+id/penjelasan_diagnosa"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="-152dp"
                android:background="@drawable/btn_rounded"
                android:onClick="launchmenu"
                android:text="Kembali Ke Menu"
                android:textColor="#537780"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </RelativeLayout>


    </LinearLayout>
</ScrollView>
